force-app/main/default/objects/Assigned_Task_Contribution__c/Assigned_Task_Contribution__c.object-meta.xml
<CustomObject>
    <label>Assigned Trail/Step Contribution</label>
    <nameField>
        <displayFormat>ATC-{0000}</displayFormat>
        <label>Contribution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Trail/Step Contributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>