force-app/main/default/objects/Assigned_Task_Contribution__c/fields/Assigned_Task_Program__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Task_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Trail/Step</label>
    <referenceTo>Assigned_Task__c</referenceTo>
    <relationshipLabel>Assigned Trail/Step Contributions</relationshipLabel>
    <relationshipName>Assigned_Task_Program_Contributions</relationshipName>
    <type>Lookup</type>
</CustomField>