force-app/main/default/objects/Assigned_Task_Contribution__c/fields/Contributed_Value__c.field-meta.xml
<CustomField>
    <fullName>Contributed_Value__c</fullName>
    <label>Contributed Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>